[package]
name = "runst"
version = "0.1.7" # bumped by release.sh
description = "A dead simple notification daemon 🦡"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/runst"
repository = "https://github.com/orhun/runst"
keywords = ["notification", "daemon", "dbus", "notify", "x11"]
categories = ["command-line-utilities"]
include = [
  "src/**/*",
  "dbus/*",
  "config/*",
  "build.rs",
  "Cargo.*",
  "LICENSE-*",
  "*.md",
]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
x11rb = { version = "0.13.1", default-features = false, features = [
  "allow-unsafe-code",
] }
cairo-rs = { version = "0.21.0", default-features = false, features = [
  "use_glib",
  "xcb",
] }
pangocairo = "0.21.0"
pango = "0.21.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
sscanf = "0.4.3"
colorsys = "0.7.0"
dirs = "6.0.0"
rust-embed = { version = "8.7.2", features = ["compression"] }
tera = "1.20.0"
estimated_read_time = "1.0.0"
regex = "1.11.1"
serde_regex = "1.1.0"
serde_json = "1.0.141"
tracing = "=0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
humantime = "2.2.0"

[build-dependencies]
dbus-codegen = "0.12.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
